# Advent_of_Code_2023

./: .gitignore  CMakeLists.txt
Day 1/: CMakeLists.txt
Day 1/Puzzle 2/: main.cpp
Day 1/Star 1/: main.cpp
Day 10/: CMakeLists.txt
Day 10/Puzzle 1/: main.cpp
Day 10/Puzzle 2/: main.cpp
Day 11/: CMakeLists.txt
Day 11/Puzzle 1/: main.cpp
Day 11/Puzzle 2/: main.cpp
Day 12/: CMakeLists.txt
Day 12/Puzzle 1/: main.cpp
Day 12/Puzzle 2/: main.cpp
Day 13/: CMakeLists.txt
Day 13/Puzzle 1/: main.cpp
Day 13/Puzzle 2/: main.cpp
Day 14/: CMakeLists.txt
Day 14/Puzzle 1/: main.cpp
Day 14/Puzzle 2/: main.cpp
Day 15/: CMakeLists.txt
Day 15/Puzzle 1/: main.cpp
Day 15/Puzzle 2/: main.cpp
Day 16/: CMakeLists.txt
Day 16/Puzzle 1/: main.cpp
Day 16/Puzzle 2/: main.cpp
Day 17/: CMakeLists.txt
Day 17/Puzzle 1/: main.cpp
Day 17/Puzzle 2/: main.cpp
Day 18/: CMakeLists.txt
Day 18/Puzzle 1/: main.cpp
Day 18/Puzzle 2/: main.cpp
Day 19/: CMakeLists.txt
Day 19/Puzzle 1/: main.cpp
Day 2/: CMakeLists.txt
Day 2/Puzzle 1/: main.cpp
Day 2/Puzzle 2/: main.cpp
Day 3/: CMakeLists.txt
Day 3/Puzzle 1/: main.cpp
Day 3/Puzzle 2/: main.cpp
Day 4/: CMakeLists.txt
Day 4/Puzzle 1/: main.cpp
Day 4/Puzzle 2/: main.cpp
Day 5/: CMakeLists.txt
Day 5/Puzzle 1/: main.cpp
Day 5/Puzzle 2/: main.cpp
Day 6/: CMakeLists.txt
Day 6/Puzzle 1/: main.cpp
Day 6/Puzzle 2/: main.cpp
Day 7/: CMakeLists.txt
Day 7/Puzzle 1/: main.cpp
Day 7/Puzzle 2/: main.cpp
Day 8/: CMakeLists.txt
Day 8/Puzzle 1/: main.cpp
Day 9/: CMakeLists.txt
(+3 files in other folders)
