cmake_minimum_required(VERSION 3.26)
project(Advent_of_Code_2023)

set(CMAKE_CXX_STANDARD 17)

#add_subdirectory("Day 1")
#add_subdirectory("Day 2")
#add_subdirectory("Day 3")
#add_subdirectory("Day 4")
#add_subdirectory("Day 5")
#add_subdirectory("Day 6")
#add_subdirectory("Day 7")
add_subdirectory("Day 8")
